Add one more tree solution